Migrate to Vite instead from Vue CLI

--- a/gokabot-demo/index.html
+++ b/gokabot-demo/index.html
@@ -10,15 +10,16 @@
             content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"
         />
 
-        <title><%= htmlWebpackPlugin.options.title %></title>
+        <title>gokabot-demo</title>
 
-        <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+        <link rel="icon" href="/favicon.ico" />
         <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css" />
-        <link rel="stylesheet" href="<%= BASE_URL %>css/reset.css" />
-        <link rel="stylesheet" href="<%= BASE_URL %>css/common.css" />
+        <link rel="stylesheet" href="/css/reset.css" />
+        <link rel="stylesheet" href="/css/common.css" />
     </head>
 
     <body>
         <div id="app"></div>
+        <script type="module" src="/src/main.ts"></script>
     </body>
 </html>
